Release 24w18a (snapshot)