@@ -1,47 +1,53 @@
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import javax.annotation.Nullable;
+import com.mojang.brigadier.StringReader;
+import com.mojang.brigadier.arguments.ArgumentType;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
+import java.util.Arrays;
+import java.util.Collection;
 
-public record ew(List<ew.a> b) {
-   public static final ew a = new ew(List.of());
-   private static final int c = 8;
-   private static final int d = 16;
+public class ew implements ArgumentType<ew.a> {
+   private static final Collection<String> c = Arrays.asList("0", "~", "~-5");
+   public static final SimpleCommandExceptionType a = new SimpleCommandExceptionType(wu.c("argument.angle.incomplete"));
+   public static final SimpleCommandExceptionType b = new SimpleCommandExceptionType(wu.c("argument.angle.invalid"));
 
-   public ew(wm $$0) {
-      this($$0.a(wm.a(ArrayList::new, 8), ew.a::new));
+   public static ew a() {
+      return new ew();
    }
 
-   public void a(wm $$0) {
-      $$0.a(this.b, ($$0x, $$1) -> $$1.a($$0x));
+   public static float a(CommandContext<eq> $$0, String $$1) {
+      return ((ew.a)$$0.getArgument($$1, ew.a.class)).a((eq)$$0.getSource());
    }
 
-   public static ew a(yh<?> $$0, ew.b $$1) {
-      List<ew.a> $$2 = $$0.a().stream().map($$1x -> {
-         yb $$2x = $$1.sign($$1x.c());
-         return $$2x != null ? new ew.a($$1x.a(), $$2x) : null;
-      }).filter(Objects::nonNull).toList();
-      return new ew($$2);
-   }
-
-   public List<ew.a> a() {
-      return this.b;
-   }
-
-   public static record a(String a, yb b) {
-      public a(wm $$0) {
-         this($$0.d(16), yb.a($$0));
-      }
-
-      public void a(wm $$0) {
-         $$0.a(this.a, 16);
-         yb.a($$0, this.b);
+   public ew.a a(StringReader $$0) throws CommandSyntaxException {
+      if (!$$0.canRead()) {
+         throw a.createWithContext($$0);
+      } else {
+         boolean $$1 = gu.b($$0);
+         float $$2 = $$0.canRead() && $$0.peek() != ' ' ? $$0.readFloat() : 0.0F;
+         if (!Float.isNaN($$2) && !Float.isInfinite($$2)) {
+            return new ew.a($$2, $$1);
+         } else {
+            throw b.createWithContext($$0);
+         }
       }
    }
 
-   @FunctionalInterface
-   public interface b {
-      @Nullable
-      yb sign(String var1);
+   public Collection<String> getExamples() {
+      return c;
+   }
+
+   public static final class a {
+      private final float a;
+      private final boolean b;
+
+      a(float $$0, boolean $$1) {
+         this.a = $$0;
+         this.b = $$1;
+      }
+
+      public float a(eq $$0) {
+         return aye.g(this.b ? this.a + $$0.k().j : this.a);
+      }
    }
 }
